# claude-hack

./: .env.production  .gitignore  AGENTS.md  CLAUDE.md  DEMO_SCRIPT.md  Makefile  PROJECT_DESCRIPTION.md  README.md  app.py  db.py  index.html  llm.py  package-lock.json  pyproject.toml  server.py  speech.py  vercel.json  vite.config.js
.github/workflows/: deploy.yml  test-backend.yml
assets/: index-73sWB4zJ.js  index-7uiRsrKT.js  index-B0qtSYoG.js  index-BCPl61W5.css  index-BKH4n6kx.js  index-BOVFrHZh.js  index-Be0mMluC.css  index-Bfe0ZQ-U.js  index-BhqG2rPE.js  index-Bz2n8GtL.js  index-C5oJBsGp.js  index-CFwuZKFE.js  index-CHnslYOr.css  index-CS7ohs3_.js  index-CX3G4TOy.css  index-C_Z3ybmN.css  index-CxBPlc0m.css  index-D4cd621k.js  index-D8LBwKSo.css  index-D9XRW088.js  index-D9qKUcbY.js  index-DSZ5opbG.js  index-DT6yep51.js  index-DfrLNFL-.css  index-K_4Mt85p.js  index-KjJTpzjD.js  index-NZSWV-D-.js  index-ZqtKvU0G.js  index-clizG-op.js  index-wsitbMkD.js
backend/: db.py  pyproject.toml  requirements.txt  server.py
backend/storyteller/: conversation.py  db.py  share.py  tts.py
backend/tests/: test_db.py  test_server.py
example-questions/: AGENTS.md  Dad i want to hear your story.md  Mom I want to hear your story.md
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ChatScreen.jsx  ComposeScreen.jsx  LanguageSelector.jsx  QuestionCard.jsx  (+3 more)
src/components/: ChatScreen.jsx  ComposeScreen.jsx  JourneyScreen.jsx  Particles.jsx
src/utils/: api.js  storage.js
(+6 files in other folders)
