[project]
name = "share-your-story"
version = "0.1.0"
description = "A simple interface for people to share their stories, with adaptive questionnaires and tag-based organization"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "llm",
    "llm-ollama",
]

[project.scripts]
story-app = "app:main"
