[project]
name = "share-your-story"
version = "0.1.0"
description = "A simple interface for people to share their stories, with adaptive questionnaires and tag-based organization"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "openai>=1.55.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "db", "speech"]
