[project]
name = "share-your-story"
version = "0.2.0"
description = "A simple interface for people to share their stories, with adaptive questionnaires and tag-based organization"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "llm",
    "llm-ollama",
    "llm-whisper-api",
    "sqlite-utils",
]

[project.optional-dependencies]
openai = [
    "openai>=1.55.0",
    "python-dotenv>=1.0.1",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["storyteller*"]
